# plonky2-circom

./: Cargo.toml  compile_to_verify.sh  how_to_run.txt
benches/: hashing.rs
circom/circuits/: constants.circom  poseidon.circom
circom/e2e_tests/: .gitignore
circom/e2e_tests/hardhat/contracts/: Verifier.sol
circom/e2e_tests/hardhat/test/: verify.ts
src/: config.rs  verifier.rs
