[package]
name = "plonky2_circom_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = { git = "https://github.com/InternetMaximalism/plonky2", rev = "c8ee171", features = ["circom_verifier", "solidity_verifier"] }
plonky2_util = { git = "https://github.com/InternetMaximalism/plonky2", rev = "c8ee171" }
intmax-zkp-core = { path = "../intmax-zkp-core-new", features = ["circom_verifier", "solidity_verifier"] }
poseidon-permutation = { git = "https://github.com/polymerdao/poseidon-permutation-rs" }
anyhow = "1.0.65"
log = "0.4.17"
env_logger = "0.9.1"
base64 = "0.13.0"
serde = "1.0.145"
serde_json = "1.0.86"
keccak-hash = "0.10.0"
sha2 = "0.10.6"
itertools = "0.10.5"
num = { version = "0.4", features = [ "rand" ] }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "hashing"
harness = false

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3

[patch.crates-io]
# plonky2 = { git = "https://github.com/InternetMaximalism/plonky2", rev = "20c6c15" }
# plonky2_u32 = { git = "https://github.com/InternetMaximalism/plonky2", rev = "20c6c15" }
plonky2 = { path = "../plonky2-intmax/plonky2" }
plonky2_u32 = { path = "../plonky2-intmax/u32" }
plonky2_field = { path = "../plonky2-intmax/field" }
plonky2_util = { path = "../plonky2-intmax/util" }
starky = { path = "../plonky2-intmax/starky" }

[patch."https://github.com/InternetMaximalism/plonky2"]
plonky2 = { path = "../plonky2-intmax/plonky2" }
plonky2_u32 = { path = "../plonky2-intmax/u32" }
plonky2_field = { path = "../plonky2-intmax/field" }
plonky2_util = { path = "../plonky2-intmax/util" }
starky = { path = "../plonky2-intmax/starky" }
